# cl-grpc-test-server

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
app/: app.py  crud.py
app/infrastructure/grpc/alert/: alert.py
app/models/: alert_models.py
app/schemas/alert/: alert_pb2.py  alert_pb2_grpc.py
protos/: alert.proto
tests/: test_cl_grpc_test.py
